[package]
name = "axum-zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
axum = "0.5.1"
hyper = "0.14.18"
tokio = { version = "1.17.0", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4.12", features = ["util"] }